# ketcher-mcp-server

./: LICENSE  PROJECT_SUMMARY.md  QUICKSTART_CN.md  README.md  TERMINAL_VIEWER.md  TEST_REPORT.md  claude_desktop_config.example.json  demo.html  install.sh  mol_ascii_art.py  molview  pyproject.toml  terminal_molecule_viewer.py  test_client.py  test_edge_cases.py  test_mcp.sh
ketcher_mcp/: __init__.py  server.py
tests/: __init__.py  test_server.py
